# apps/backend/src/controllers/webhooks/validation.ts
@@ -1,0 +1,11 @@
+import z from 'zod';
+
+export const DLocalWebhookValidationSchema = z.object({
+  body: z.object({
+    payment_id: z.string(),
+  }),
+});
+
+export type DLocalWebhookrRouteBody = z.infer<
+  typeof DLocalWebhookValidationSchema
+>['body'];
